# Proyecto-MLOPS

./: .gitignore  LICENSE  Makefile  README.md  dvc.yaml  environment.yml  proyecto-mlops-463304-2f51b4d59424.json  pyproject.toml  script.py  setup.py
.dvc/: config
configs/: data_eng.yaml
configs/configs/: data_eng.yaml
configs/credentials/: enovo  id_rsa.pub
mlruns/0/: meta.yaml
mlruns/0/tags/: mlflow.note.content
mlruns/models/Tatis Mogrovejo GIT/: meta.yaml
src/: pyproject.toml
src/app_exception/: exception.py
src/app_logging/: __init__.py  logger.py
src/data_eng/: stage0_loading.py  stage1_ingestion.py  stage2_cleaning.py  stage3_labeling.py  stage4_splitting.py  stage_1_2_train_evaluate.py
src/model_eng/: stage1_2_train_evaluate.py  stage3_prediction.py
src/model_eng/model1/: stage3_prediction.py
src/model_engineering/model1/: stage1-2_train-evaluate.py
